--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </form>
   </section>
   <footer>
-    <p>Copyright © 2019 Dyma, Inc.</p>
+    <p>Copyright © 2021 Zacharie Tshilomba</p>
   </footer>
 </body>
 </html>
